Fix spacing & font sizes

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -42,7 +42,7 @@ hr {
     font-weight: bold;
 }
 #author-subtitle {
-    font-size: 10px;
+    font-size: 14px;
     color: #777;
     margin-top: 4px;
 }
